	* Use libao for playing sounds via NAS instead of accessing NAS
	  directly
	* Yahoo! buddy requests to add you to their buddy list now prompt for
	  authorization.

	Bug fixes:
	* People using input methods can now use Enter again.
	* Many problems related to having an IM conversation and a chat open
	  with the same name (Andrew Hart)
	* Improved buddy list searching with CTRL+F

	Preference changes:
	* Removed "Dim idle buddies" buddy list preference, default to "Yes."
	* Removed keyboard shortcut preferences for ctrl-b/i/u and made sure they
	  won't interfere with bindings set by the GTK theme.
	* Removed keyboard shortcuts preferences for ctrl-# to insert a smiley,
	  default to "No"
	* Removed preference for buddy list button type, defaulted to "None"
	* Removed "Enter" vs. "Ctrl-Enter" to send, defaulted to "Enter" to send,
	  made it possible to change this binding in your GTK theme.
	* Removed "Show multi-colored screennames in chats," defaulted to "Yes."
	  Made screenname colors automatically adjust themselves to compensate for
	  background color.
	* Removed "Raise Buddy List Window on Events" defaulted to "No"
	* Removed "Display remote nicknames if no alias is set"
	* Removed "Show idle times" and "Show warning levels" from the buddy list
	  defaulted to "Yes".
	* Removed "Auto-expand contacts" default to "No"
	* Removed conversation buttons
	* Removed "Raise conversation window" preferences, moved feature to notify
	  plugin
	* Removed "Show alias in tabs/titles," default to "Yes".
	* Removed "Show formatting toolbars," made the option in the
	  conversation menu affect the global preference.
	* Removed "Show timestamps," defaulted to yes but made timestamp plugin
	  override this.
	* Removed protocol options.
	* Consolidated three ignore formatting options into a single one.
	* Removed "Escape closes windows," defaulted to Ctrl-W.

version 1.1.5:
	* Yahoo file receiving and buddy icon receiving work again.